--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/diegoch4102/WebDevelopment#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "jshint": "^2.13.1",
         "mongoose": "^6.0.12"
